...
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomBar"
            android:layout_below="@+id/topBar">


            <ListView
                android:id="@+id/listViewQuests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="44dp"
                android:background="@android:color/transparent"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
...
